<resources>
    <string name="app_name">E-Commerce</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="sign_up"><u>Sign Up</u></string>


    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="your_name">Your Name</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_with_your_email_and_password_or_continue_with_social_media">Sign up with your email and
        password or continue with social media
    </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="signin_with_your_email_and_password_or_continue_with_social_media">Signin with your email and password
        or continue with social media
    </string>
    <string name="welcome_back">Welcome Back</string>
    <string name="remember_me">Remember me</string>
    <string name="login_with_google">Login with Google\n</string>
    <string name="signup_with_google">Sign up with Goole</string>
    <string name="logout">Logout</string>
    <string name="continues">Tiếp tục</string>
    <string name="back_to_login">Quay lại đăng nhập</string>
    <string name="verify">Nhập email đăng ký của bạn. Chúng tôi sẽ gửi mã OTP về điện thoại của bạn để xác thực.</string>
    <string name="your_phone">Phone Number\n</string>
    <string name="navigation_drawer_open">Mở menu</string>
    <string name="navigation_drawer_close">Đóng menu</string>
</resources>