<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <!-- Tiêu đề -->
        <TextView
            android:id="@+id/signup_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="E-Commerce"
            android:textColor="#FD1503"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/create_account"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/signup_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Trường nhập liệu -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/your_name"
            android:textColorHint="#B0B0B0"
            app:layout_constraintTop_toBottomOf="@id/create_account"
            android:backgroundTint="#80FFFFFF">



            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/email"
            android:textColorHint="#B0B0B0"
            app:layout_constraintTop_toBottomOf="@id/name_textinputlayout"
            android:backgroundTint="#80FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/your_phone"
            android:textColorHint="#B0B0B0"
            app:layout_constraintTop_toBottomOf="@id/email_textinputlayout"
            android:backgroundTint="#80FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Chọn giới tính -->
        <TextView
            android:id="@+id/tvGenderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:text="Select Gender"
            android:textStyle="bold"
            android:textColor="#F41503"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_textinputlayout" />

        <HorizontalScrollView
            android:id="@+id/gender_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@id/tvGenderLabel">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:layout_marginEnd="12dp"
                    android:textSize="16sp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:textColor="#FFFFFF"
                    app:strokeColor="#FFFFFF" />

                <Button
                    android:id="@+id/btnFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:layout_marginEnd="12dp"
                    android:textSize="16sp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:textColor="#FFFFFF"
                    app:strokeColor="#FFFFFF" />

                <Button
                    android:id="@+id/btnOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Other"
                    android:textSize="16sp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:textColor="#FFFFFF"
                    app:strokeColor="#FFFFFF" />
            </LinearLayout>
        </HorizontalScrollView>

        <!-- Mật khẩu -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/password"
            android:textColorHint="#B0B0B0"
            app:endIconMode="password_toggle"
            app:endIconTint="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@id/gender_scrollview"
            android:backgroundTint="#80FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reenter_password_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/confirm_password"
            android:textColorHint="#B0B0B0"
            app:endIconMode="password_toggle"
            app:endIconTint="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@id/password_textinputlayout"
            android:backgroundTint="#80FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reenter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Nút Đăng ký -->
        <Button
            android:id="@+id/signup_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/ban_background"
            android:paddingHorizontal="48dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/reenter_password_textinputlayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Đã có tài khoản -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/signup_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/already_have_account_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account?"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/signin_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Sign in"
                android:textColor="#F61404"
                android:textStyle="bold"
                android:textSize="14sp"
                android:clickable="true"
                android:focusable="true"
                android:tag="loginNow" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>